Paso a paso para crear documentos con google y editarlos desde cualquier navegador

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /public/hot
 /public/csv
 /public/storage
+/storage/gescontable-web.json
+/storage/gescontable-local.json
 /storage/*.key
 /vendor
 .env
