Ajuste de paleta de colores, Creación de google en soportes

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /public/hot
 /public/csv
 /public/storage
+/public/img
 /storage/gescontable-web.json
 /storage/gescontable-local.json
 /storage/*.key
